--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,68 @@
 <div class="row" style="justify-content: center; vertical-align: middle; margin-top:5%;">
-  <div class="col s6 offset-s3" *ngIf="!showSchedule">
+  <div class="col s6 offset-s3">
     <div class="card">
       <div class="card-content">
-        <span class="card-title">Personal loan upto K20,000</span>
-        <h5>How much would you like to borrow?</h5>
-        <p class="range-field">
-          <input type="range" [(ngModel)]="amount" id="amt-slide" min="0" step="500" max="1000000" value="20000" />
-        </p>
-        <p>{{amount | number:'1.0-0'}}</p>
-        <h5>For how many months?</h5>
-        <p class="range-field">
-          <input type="range" [(ngModel)]="months" #monthsSlide id="month-slide" min="0" max="48" value="6" />
-        </p>
-        <p>{{months}}</p>
+        <div *ngIf="!showSchedule">
+          <span class="card-title">Personal loan upto K20,000</span>
+          <h5>How much would you like to borrow?</h5>
+          <p class="range-field">
+            <input type="range" [(ngModel)]="amount" name="amount" min="0" step="1000" max="1000000" value="20000" />
+          </p>
+          <p>{{amount | number:'1.0-0'}}</p>
+          <h5>For how many months?</h5>
+          <p class="range-field">
+            <input type="range" [(ngModel)]="months" name="months" min="0" max="48" value="6" />
+          </p>
+          <p>{{months}}</p>
+          <br><br>
+          <div>
+            <ul class="collection collection-margin">
+              <li class="collection-item">Monthly Repayment
+                <span class="secondary-content" [(ngModel)]="pmt">{{pmt | number:'1.0-0'}}</span>
+              </li>
+              <li class="collection-item" *ngIf="message !== ''">
+                {{message}}
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <button class="btn waves-effect" (click)="getSchedule()">Show Schedule</button>
+            <button class="btn waves-effect" (click)="calculatePMT()">Monthly Payment</button>
+          </div>
+          <hr>
+          <span class="card-title">Repayment Schedule</span>
+          <!-- <div>
+            <button class="btn waves-effect" (click)="toggleView()">Back</button>
+          </div> -->
+          <br>
+          <div>
+            <ul class="collection collection-margin" *ngFor="let repayment of schedule">
+              <li class="collection-item">
+                <span class="card-title">
+                  <b>Payment {{repayment.paymentNo + 1}}</b>
+                </span>
+                <br> Principal
+                <b>{{repayment.principle | number:'1.0-0'}}</b> | Interest:
+                <b>{{repayment.interest | number:'1.0-0'}}</b> :
+                <span class="secondary-content">Bal:
+                  <b>{{repayment.balance | number:'1.0-0'}}</b>
+                </span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div *ngIf="showSchedule">
+        </div>
+
       </div>
-      <div>
-        <ul class="collection collection-margin">
-          <li class="collection-item">Monthly Repayment
-            <span class="secondary-content">{{pmt | number:'1.0-0'}}</span>
-          </li>
-          <li class="collection-item" *ngIf="message !== ''">
-            {{message}}
-          </li>
-        </ul>
-      </div>
-      <div class="card-action">
-        <button class="btn waves-effect" (click)="getSchedule()">Show Schedule</button>
-        <button class="btn waves-effect" (click)="calculatePMT()">Monthly Payment</button>
-      </div>
-    </div>
-  </div>
-  <div class="col s6 offset-s3" *ngIf="showSchedule">
-    <div>
-      <button class="btn waves-effect" (click)="toggleView()">Back</button>
-    </div>
-    <br>
-    <div>
-      <ul class="collection collection-margin" *ngFor="let repayment of schedule">
-        <li class="collection-item">Payment {{repayment[0]}} - {{repayment[1] | number:'1.0-0'}} :
-          <span class="secondary-content">{{repayment[2]}}</span>
-        </li>
-      </ul>
     </div>
   </div>
 </div>
 
 
 <script>
-  var slider = document.getElementById('amountSlide');
+  var slider = document.getElementById('amt-slide');
   noUiSlider.create(slider, {
     connect: true,
     tooltips: true,
