updated the UI and loan amortization

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,9 +31,9 @@
           </div>
           <hr>
           <span class="card-title">Repayment Schedule</span>
-          <!-- <div>
+          <div>
             <button class="btn waves-effect" (click)="toggleView()">Back</button>
-          </div> -->
+          </div>
           <br>
           <div *ngIf="showSchedule">
             <ul class="collection collection-margin" *ngFor="let repayment of schedule">
