--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,14 +26,10 @@
             </ul>
           </div>
           <div class="card-action">
-            <button class="btn waves-effect" (click)="getSchedule()">Show Schedule</button>
-            <button class="btn waves-effect" (click)="calculatePMT()">Monthly Payment</button>
+            <button class="btn waves-effect" (click)="calculatePMT()">Calculate</button>
           </div>
           <hr>
           <span class="card-title">Repayment Schedule</span>
-          <div>
-            <button class="btn waves-effect" (click)="toggleView()">Back</button>
-          </div>
           <br>
           <div *ngIf="showSchedule">
             <ul class="collection collection-margin" *ngFor="let repayment of schedule">
