--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,13 @@
 .card-title{
     margin-bottom: 10px;
-    font-weight: 700;
+    font-weight: 600;
 }
 
 h5{
     font-size: 15pt;
 }
 h1,h2,h3,h4,h5,h6, .card-title{
-    font-family: 'Poppins';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .collection-margin {
@@ -15,7 +15,7 @@ h1,h2,h3,h4,h5,h6, .card-title{
 }
 
 body, p ,card {
-    font-family: 'Lato';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a, button{
