--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,56 +1,44 @@
-<div class="row" style="justify-content: center; vertical-align: middle; margin-top:2%;">
-  <div class="card">
-    <div class="card-content">
-      <!-- loan details -->
-      <div>
-        <span class="card-title">Personal loan upto KES1,000,000</span>
-        <h5>How much would you like to borrow?</h5>
-        <p class="range-field">
-          <input type="range" [(ngModel)]="amount" name="amount" value="250000" min="0" step="1000" max="1000000" />
-        </p>
-        <p>{{amount | number:'1.0-0'}}</p>
-        <h5>For how many months?</h5>
-        <p class="range-field">
-          <input type="range" [(ngModel)]="months" name="months" value="8" min="0" max="48" />
-        </p>
-        <p>{{months}}</p>
-        <br>
-        <br>
-        <div>
-          <ul class="collection collection-margin">
-            <li class="collection-item">Monthly Repayment
-              <span class="secondary-content" [(ngModel)]="pmt">{{pmt | number:'1.0-0'}}</span>
-            </li>
-            <li class="collection-item" *ngIf="message !== ''">
-              {{message}}
-            </li>
-          </ul>
-        </div>
-        <div class="card-action">
-          <button class="btn waves-effect" (click)="calculate()">Calculate</button>
-        </div>
-        <hr>
-        <span class="card-title">Repayment Schedule</span>
-        <br>
-        <br>
-        <!-- repayment schedule -->
-        <div>
-          <ul class="collection collection-margin" *ngFor="let repayment of schedule">
-            <li class="collection-item">
-              <span class="card-title">
-                <b>Payment {{repayment.paymentNo + 1}}</b>
-              </span>
-              <br> Principal
-              <b>{{repayment.principal | number:'1.0-0'}}</b> | Interest:
-              <b>{{repayment.interest | number:'1.0-0'}}</b> | Total: 
-              <b>{{repayment.interest + repayment.principal | number:'1.0-0'}}</b> 
-              <span class="secondary-content">Bal:
-                <b>{{repayment.balance | number:'1.0-0'}}</b>
-              </span>
-            </li>
-          </ul>
-        </div>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapseMenu" aria-expanded="false">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="/">
+       <i class="fa fa-film text-danger"></i> MovieBuff
+      </a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="collapseMenu">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" *ngIf="user">
+          <a class="nav-link" routerLink="/upload">
+            <i class="fa fa-upload"></i> Upload
+          </a>
+        </li>
+
+        <li class="nav-item" *ngIf="!user">
+          <a class="nav-link" href="/register">
+            Register
+          </a>
+        </li>
+
+        <li class="nav-item" *ngIf="!user">
+          <a class="nav-link" href="/login">
+            Login
+          </a>
+        </li>
+
+        <li class="nav-item" *ngIf="user">
+          <a class="nav-link" href="/">
+            <b>Hey, {{user?.username}}</b>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
+</nav>
+<br>
+<div class="container-fluid" style="margin-top:40px;">
+  <router-outlet></router-outlet>
 </div>
