--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,5 @@
-.card-title{
-    margin-bottom: 10px;
-    font-weight: 600;
-}
+.navbar-brand {
+    font-weight: 900!important;
+    color: #000 !important;
 
-h5{
-    font-size: 15pt;
-}
-h1,h2,h3,h4,h5,h6, .card-title{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.collection-margin {
-    margin:5px 5px 5px 5px;
-}
-
-body, p ,card {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-a, button{
-    text-transform: capitalize;
-    margin:2px 2px;
 }
